[package]
name = "specops"
version = "0.1.0"
authors = ["Ed <barp.edoardo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7.0", features = ["dynamic"] }
bevy-inspector-egui = "0.11.0"
env_logger = "0.9.0"
log = "0.4.17"
bevy_mouse_tracking_plugin = "0.2.1"
bevy_rapier2d = { version = "0.13.2", features = [ "simd-stable", "debug-render" ] }

[workspace]
resolver = "2"